reorganize and new paragraph on history.

--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -60,28 +60,21 @@ I could not describe it as well as
 Trigger warning: I burst into tears the first time I watched this -- the description was so spot on.
 Or [this great essay by Katie Rose Guest Pryal](https://chroniclevitae.com/news/1203-working-when-your-brain-isn-t) on working while depressed.
 
-When I read about others' experience of mental health issues, I'm blown away by the terrible situations that develop. 
-**My own situation is so privileged, I often think "how can I complain?" I should just suck it up.**
-That kind of thinking is part of the problem!
-I can't just suck it up. It is an illness. 
-Yes, there is a lot of personal work that I do to improve my mental state. 
-But there's no switch I can flip, no magic bullet. 
-I take medication, and that helps. A lot. But it isn't enough.
-The medication helps me put a floor on how far I fall when things go bad. 
-I regularly meet with a mental health professional. The combination of counseling and medication is more effective than either alone 
-(see [this](https://well.blogs.nytimes.com/2015/01/08/to-treat-depression-drugs-or-therapy/) or
-[this](https://news.vanderbilt.edu/2014/08/20/drugs-therapy-nonchronic-depression/)).
-I practice mindfulness meditation. 
-I exercise. 
-Late last year I made some tough decisions about what I could and couldn't continue to do. 
-Cutting back on work created space for me to start healing again. 
-But telling colleagues that some things were not going to happen was the hardest thing I've had to do for a long time. 
-
 In hindsight, it is pretty clear I was experiencing depression for many years prior to that total collapse. 
 Maybe I'd have spotted it sooner if mental illness was more widely discussed and acknowledged.
 I might have thought to ask my physician about the normal frequency of suicidal thoughts (zero!). 
 
-Paragraph on remaining successful while depressed. 
+By 2014, the combination of counseling and medication had set me right. 
+I was better! So I stopped the medication and the counseling. 
+And then my sabbatical leave disappeared into a black hole of despair. 
+Back to counseling, and I chose a different medication with fewer side effects. I got better. 
+Then things slid sideways again in 2016! More counseling, and I improved again. 
+Just enough to say, sure, I'll teach those extra courses and take on an administrative appointment. 
+Midway through last semester, it all came unglued again. 
+I made some tough decisions about what I could and couldn't continue to do. 
+Telling colleagues that some things were not going to happen was the hardest thing I've had to do for a long time. 
+Choosing to give up the courses I created to focus on teaching required courses was just as hard. 
+But, cutting back on work created space for me to start healing again. 
 
 I told my Facebook friends I was experiencing a relapse last year. 
 A colleague was surprised and wrote "I always thought you were a well-adjusted thoughtful and caring person. Still do btw."[^quote]
@@ -96,6 +89,22 @@ But others, like me, show nothing. We're still suffering.
 
 [^quote]: So many reactions to this comment! I chose to focus on the compliment that I am a thoughtful and caring person. But why can't a depressed person be thoughtful and caring? Thinking otherwise is part of the stigma of mental illness.
 
+When I read about others' experience of mental health issues, I'm blown away by the terrible situations that develop. 
+**My own situation is so privileged, I often think "how can I complain?" I should just suck it up.**
+That kind of thinking is part of the problem!
+I can't just suck it up. It is an illness. 
+Yes, there is a lot of personal work that I do to improve my mental state. 
+But there's no switch I can flip, no magic bullet. 
+I take medication, and that helps. A lot. But it isn't enough.
+The medication helps me put a floor on how far I fall when things go bad. 
+I regularly meet with a mental health professional. The combination of counseling and medication is more effective than either alone 
+(see [this](https://well.blogs.nytimes.com/2015/01/08/to-treat-depression-drugs-or-therapy/) or
+[this](https://news.vanderbilt.edu/2014/08/20/drugs-therapy-nonchronic-depression/)).
+I practice mindfulness meditation. 
+I exercise.
+
+
+
 Sitting here in my privileged bubble, having dug out of the latest relapse, I've been asking "what can I do to make things better for others?". 
 This essay is one thing. 
 Together with a few colleagues who also experience mental health issues, I've been looking around for ways to support students. We've added lists of resources to our course homepages and posted signs on doors indicating we are willing to listen.
@@ -105,12 +114,10 @@ It is for students, but I'll keep an eye on their activities and support what I 
 There is also [a report on fostering a supportive workplace for faculty with mental health issues](http://tucollaborative.org/sdm_downloads/supportive-academic-environments-for-faculty-with-mental-illnesses/) that I need to dig into. 
 I'm really lucky to have supportive and understanding colleagues; we're building that supportive workplace bit by bit! 
 
-One of the hardest bits was coming to the realization that I am never going to be "better". 
+The realization that I am never going to be "better" was the hardest bit. 
 I must work on my mental health every. single. day. 
 Just the other day I found my equilibrium knocked askew by a random event.
 It was no reflection on me; just part of the job. 
 Nonetheless the negative thoughts boiled up like storm clouds, sapping my productivity even after I had done all I could. 
 I take some deep breaths -- mindfully watch the clouds roll by. There is always blue sky up above. 
 Above all else, be kind, especially to myself.
-
-
