few more tweaks

--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -34,7 +34,7 @@ Now I'm telling everyone!
 Surely there will be negative consequences?
 
 Which is entirely the point. There could be, but there shouldn't be. It's no different from saying I'm a Type 2 diabetic.[^1] 
-Clinical depression (and other mental maladies) is a chronic condition that affects my behavior, life expectancy, and quality of life. For the same reason, I should speak up. 
+Clinical depression (among other mental maladies) is a chronic condition that affects my behavior, life expectancy, and quality of life. For the same reason, I should speak up. 
 **If I can't weather the blow back (if any) as an atheist, cisgender, heterosexual, white, male, fully promoted professor, then there really *is* a problem.** Privilege is leaking out of my ears.
 Still, I have taken a long time to get to the point where I could write this. 
 
@@ -82,7 +82,7 @@ I made some tough decisions about what I could and couldn't continue to do.
 Telling colleagues that some things were not going to happen was the hardest thing I've had to do for a long time. 
 Choosing to give up the courses I created to focus on teaching required courses was just as hard. 
 But, cutting back on work created space for me to start healing again. 
-In part I could cut back because of my privelege. 
+In part I could cut back because of my privilege. 
 I was also trying to do too much. I'm still working 40+ hours a week. 
 My days are full.
 
@@ -109,7 +109,6 @@ Some people wear their depression on their sleeves.
 You can tell they are suffering.
 But others, like me, show nothing in public. We're still suffering. 
 Those close to us probably see it all too well.
-
 
 [^quote]: So many reactions to this comment! I chose to focus on the compliment that I am a thoughtful and caring person. But why can't a depressed person be thoughtful and caring? Thinking otherwise is part of the stigma of mental illness.
 
@@ -147,4 +146,4 @@ Nonetheless the negative thoughts boiled up like storm clouds, sapping my produc
 I take some deep breaths -- mindfully watch the clouds roll by. There is always blue sky up above. 
 Above all else, be kind, especially to myself.
 
-[^Acknowledgements]: Some of those colleagues read this prior to posting, and it is infinitely better because of John Carroll, Lisa Pennisi, Leon Higley and Jessica Burnett. My counselor Peter Allman helped purge the more self-destructive bits. And I can't find words to thank my patient and loving spouse Brigitte Tenhumberg. 
+[^Acknowledgements]: Some of those colleagues read this prior to posting, and it is infinitely better because of John Carroll, Lisa Pennisi, Leon Higley and Jessica Burnett. My counselor Peter Allman graciously took time to read this and (among other great advice) reminded me to emphasize the importance of counseling! And I can't find words to thank my patient and loving spouse Brigitte Tenhumberg. 
