--- a/content/post/2018-09-18-geometric-vs-exponential-growth-models-a-zombie-idea.Rmd
+++ b/content/post/2018-09-18-geometric-vs-exponential-growth-models-a-zombie-idea.Rmd
@@ -29,24 +29,22 @@ Smith (but only because he confuses geometric growth for exponential)
 
 The textbook that we are using in NRES 220 Principles of Ecology has online questions. After reading about the distinction between geometric and exponential growth students were asked this question[^1] :
 
-Which of the following is true:
+Which of the following populations will grow geometrically (ignoring species interactions):
 
-a) ...
-b) 
-c)
-d) 
+a) A large population of deer that breeds once per year on a small island with limited food
+b) A large population of humans that breed continuously on a small island with limited food
+c) A small population of deer that breeds once per year just arrived on a large island with unlimited food
+d) A small population of humans that breed continuously just arrived on a large island with unlimited food
 
-All students were able to distinguish between density independent and density dependent growth accurately. But half chose discrete time and half chose continuous time. However, this distinction is ecologically unimportant. You can model *any* population using discrete time or continuous time. Different math, and sometimes one is more convienent than the other, but no ecological difference. 
+Half of the students choose c, and half d (with a few stragglers elsewhere); the textbook's answer is b. So students accurately distinguish between density independent and density dependent growth. But half chose discrete time and half chose continuous time. However, this distinction is ecologically unimportant. You can model *any* population using discrete time or continuous time. Different math, and sometimes one is more convienent than the other, but no ecological difference. 
 
-A typical explanation goes like this: some species, like deer, give birth over a relatively short period of time within a year. Therefore, we can best model this using discrete time steps that project from one birth pulse to the next. But what about deaths? Deer die continuously! There are pulses of death (like rifle season for male deer), but they don't occur at the same time as the birth pulses.  
+A typical explanation goes like this: some species, like deer, give birth over a relatively short period of time within a year. Therefore, we can best model this using discrete time steps that project from one birth pulse to the next. But what about deaths? Deer die continuously! There are pulses of death (like rifle season for male deer), but they don't occur at the same time as the birth pulses.   
 
-The same textbook uses aphids as the paradigmatic example of an exponentially growing population because their births are continuous. But, exponential growth assumes deaths and births occur at the same rate, and aphids birth and death rates vary wildly with age. Also, I could make a discrete time model with a time step of 1 day, and then my model is "approximately" continuous at time steps of 1 week or longer. 
-
-Moreover, I can start with continuous rates, and calculate the equivalent discrete time model that *makes identical predictions*.[^2] If you don't believe me, check Hal Caswell's "Matrix Population Models", which has an explicit formulation of "continuous" reproduction for discrete time matrix projection models (birth flow models). 
+The same textbook uses aphids as the paradigmatic example of an exponentially growing population because their births are continuous. But, exponential growth assumes deaths and births occur at the same rate, and aphids birth and death rates vary wildly with age. Also, I could make a discrete time model with a time step of 1 day, and then my model is "approximately" continuous at time steps of 1 week or longer. If I chose a time step of an hour, then the births would be pulsed again. Moreover, I can start with continuous rates, and calculate the equivalent discrete time model that *makes identical predictions*.[^2] If you don't believe me, check Hal Caswell's "Matrix Population Models", which has an explicit formulation of "continuous" reproduction for discrete time matrix projection models (birth flow models). Neither model is perfectly correct.
 
 This is [Bonini's paradox](https://en.wikipedia.org/wiki/Bonini's_paradox) in action. Or, as George Box put it, "All models are wrong, but some are useful".
 
-I call this error of conflating mathematical differences with ecological difference a 'map-territory error', after the [map-territory relation](https://en.wikipedia.org/wiki/Map%E2%80%93territory_relation). We are mistaking a difference in the map (discrete vs. continuous time) with an ecological difference. 
+I call this error of conflating mathematical differences with ecological difference a 'map-territory error', after the [map-territory relation](https://en.wikipedia.org/wiki/Map%E2%80%93territory_relation). We are mistaking a difference in the map (discrete vs. continuous time) with an ecological difference. Ecologists seem particularly prone to map-territory errors (maybe more on that later). Maybe this is because of our physics envy
 
 [^1]: The question is altered to protect copyright and prevent releasing the correct answer "into the wild".
 
