--- a/content/post/mental-health-redux.Rmd
+++ b/content/post/mental-health-redux.Rmd
@@ -4,6 +4,7 @@ author: Drew Tyre
 date: '2019-01-21'
 draft: true
 slug: mental-health-redux
+summary: 'About a year ago I disclosed my depression to the interwebs. It seems timely to revisit the topic.'
 categories: []
 tags:
   - Higher Ed
@@ -14,9 +15,45 @@ About a year ago [I disclosed my depression to the interwebs](https://drewtyre.r
 It seems timely to revisit the topic.
 
 On the whole, telling people about my experience of depression was a positive 
-experience. 
+experience. This is likely a result of my priveleged position -- not everyone
+would have experienced such an outcome. My colleagues were very supportive. 
+I made new friends as people reached out to have lunch and talk about science 
+fiction novels and cooking. I didn't hear any official reaction, but through the
+grapevine came rumbles of my blogpost triggering discussions in various student
+support groups throughout the university.
 
-Leading Discussion of mental health. Symptoms of stigma. 
+One thing I didn't anticipate was the number of people who wanted to talk to me 
+about their mental health. I listened attentively, encouraged them to seek 
+professional help, and worked my butt off trying not to get attached to their 
+outcomes! I have a much greater appreciation for the work of therapists and 
+councilors now. One such meeting leaves me exhausted, head spinning with 
+questions about what I said, what should I have said, did I do enough. 
+
+Last fall the Natural Resources Diversity Initiative invited me to lead a 
+discussion on mental health. As I was feeling so much better, sure! Great Idea!
+It turned out great, but the week before I was an anxious wreck. My only 
+qualification is a lack of the quantity in question! I asked for suggestions on
+twitter -- that turned out to be a mixed benefit. On the one hand, lots of 
+supportive replies telling me to just tell my story, and it'll be great. On the 
+other were outright critical replies telling me to turn it over to a mental 
+health professional, or worrying that the discussion would dilute the lived 
+experience of genuinely ill people. I left twitter alone for the better part of
+a month after that. 
+
+The thing is, we've had presentations from "the proper authorities". This was my
+colleagues saying "we want even more discussion!". I reached out to our university 
+Counseling and Psychological Services about this discussion and got no reply -- 
+they are swamped. And at the 
+meeting a few genuinely ill people spoke up and shared their experience. People 
+get it. This isn't about graduate student whining. This is about realizing that 
+mental health is as important as physical health. I adapted [some material I 
+found on the CAPS website](https://caps.unl.edu/big-red-folder) to a "myth or fact" 
+activity. I told my story, did the exercise, and let the discussion flow after 
+that. It went really well. 
+
+Symptoms of stigma. 
+
+On the whole, a positive outcome. 
 
 Current state
 
@@ -26,4 +63,6 @@ family is always close at hand.
 
 [^things]: Mushrooms, yeast, and lactic acid bacteria are alive! Our windows 
 block too much light to grow plants indoors. I plan to start some outdoor herb 
-planters as the weather warms up. And there is always this critter. 
+planters as the weather warms up. And there is always 
+[this critter](https://flic.kr/p/2ec3evR).
+
